5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1716_2499.log
== TEST (2019-06-13 13:58:52) 
-- CODE:
a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
    a=a+(a*pca/100)
    b=b+(b*pcb/100)
    t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 13:59:25) 
-- CODE:
a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
    a=a+(a*pca/100)
    b=b+(b*pcb/100)
    t=t+1
print(t)
-- EXECUTION TIME:
0.834051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 3, in <module>
    b=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:01:33) 
-- CODE:
tfrom math import*

x=eval(input(" "))

k=int(input(" "))

contador=1

sinal=-1

resultado=x

expoente=3

while(contador<k):
    resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
    sinal=sinal*(-1)
    expoente=expoente+2
    contador=contador+1
    
print(round(resultado,10))

-- ERROR:
File "XXXX", line 1
    tfrom math import*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:23:14) 
-- CODE:
tfrom math import*

a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
    a=a+(a*pca/100)
    b=b+(b*pcb/100)
    t=t+1
print(t)

-- ERROR:
File "XXXX", line 1
    tfrom math import*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:23:46) 
-- CODE:
tfrom math import*

a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
      a=a+(a*pca/100)
      b=b+(b*pcb/100)
      t=t+1
print(t)

-- ERROR:
File "XXXX", line 1
    tfrom math import*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:23:57) 
-- CODE:
from math import*

a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
      a=a+(a*pca/100)
      b=b+(b*pcb/100)
      t=t+1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 15:24:35) 
-- CODE:
from math import*

a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
      a=a+(a*pca/100)
      b=b+(b*pcb/100)
      t=t+1
print(t)

-- EXECUTION TIME:
1.87197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 5, in <module>
    b=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:24:44) 
-- CODE:
from math import*

a=int(input("hab a: "))

b=float(input("hab b: "))

pca=float(input("cidade A: "))

pcb=float(input("cidade B: "))

t=0

while(a<=b):
      a=a+(a*pca/100)
      b=b+(b*pcb/100)
      t=t+1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:28:22) 
-- CODE:
from math import*
from math import*

x = int(input( "digite um numero k:  "))

e = 1

i = 1

while(i < x):
e = e + (1/factorial(i))
i = i+1
print(round(e,8))

-- ERROR:
File "XXXX", line 11
    e = e + (1/factorial(i))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:28:35) 
-- CODE:
from math import*
from math import*

x = int(input( "digite um numero k:  "))

e = 1

i = 1

while(i < x):
   e = e + (1/factorial(i))
   i = i+1
print(round(e,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 15:28:49) 
-- CODE:
from math import*
from math import*

x = int(input( "digite um numero k:  "))

e = 1

i = 1

while(i < x):
   e = e + (1/factorial(i))
   i = i+1
print(round(e,8))

-- EXECUTION TIME:
0.711007
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
